Make tests executable as a java application.